main.css
* {
    box-sizing: border-box;
}

body {
    background-color: black;
}

form {
    color: white;
    text-align: center;
    margin-top: 150px;
    font-size: 50px;
}

input {
    display: block;
    height: 25px;
    margin-left: auto;
    margin-right: auto;
    margin-top: 25px;
}

button {
    height: auto;
    width: 100px;
    font-size: 25px;
    border-color: red;
    border-radius: 5px;
    background-color: red;
    color: white;
}

ul {
   list-style-type: none; 
}

.results, h1, h2 {
    text-align: center;
    color: black;
}

h1, h2{
    color: white;
}

.container {
    width: 750px;
    height: auto;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 20px;
    background-color: rgb(194, 85, 85); 
    padding: 25px;
    border-radius: 10px;
}

